[tool.poetry]
name = "python-tutorials"
version = "0.1.0"
description = "Python tutorials based on chainer/tutorials"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
chainer = "^6.5"
numpy = "^1.18"
matplotlib = "^3.2"
pandas = "^1.0"
scikit-learn = "^0.22"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
